--- a/style.css
+++ b/style.css
@@ -10,12 +10,16 @@
 	--FontWeight700: 700;
 }
 
+/* General CSS
+-------------------------------------------------------------------------------------------------------------------- */
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
 
+/* Main & Formulaire
+-------------------------------------------------------------------------------------------------------------------- */
 main {
 	background-color: var(--Green200);
 	height: 100vh;
@@ -29,8 +33,8 @@ main {
 }
 
 form {
-	width: 60%;
-	min-height: 60%;
+	width: 600px;
+	min-height: 650px;
 	max-height: fit-content;
 	display: flex;
 	flex-direction: column;
@@ -40,27 +44,42 @@ form {
 	border-radius: 25px;
 }
 
+/* Section
+-------------------------------------------------------------------------------------------------------------------- */
+
 section {
 	display: flex;
 	flex-direction: row;
 	gap: 20px;
+	width: 100%;
 }
 
-button {
-	background-color: var(--Green600);
-	color: var(--White);
-	border: none;
-	border-radius: 10px;
-	padding: 15px 0;
-	font-weight: var(--FontWeight700);
-}
-
+/* Input, Span, Labels
+-------------------------------------------------------------------------------------------------------------------- */
 input {
 	width: 100%;
 	padding: 10px;
 	border-radius: 10px;
 	border: 1px solid var(--Grey500);
 }
+
+input:hover,
+input:focus,
+input:active {
+	border: 1px solid var(--Green600);
+}
+
+span {
+	display: none;
+	color: var(--Red);
+}
+
+label {
+	color: var(--Grey900);
+}
+
+/* Query Type
+-------------------------------------------------------------------------------------------------------------------- */
 
 .enquiry {
 	width: 100%;
@@ -78,13 +97,42 @@ input {
 	width: fit-content;
 }
 
+.enquiry:focus,
+.enquiry:active {
+	background-color: var(--Green200);
+	border: 1px solid var(--Green600);
+}
+
+/* Message & Consent
+-------------------------------------------------------------------------------------------------------------------- */
+
 #message {
 	height: 8vh;
 }
+
 #consent {
 	width: fit-content;
 	margin-right: 20px;
 }
-span {
-	display: none;
+
+article {
+	display: flex;
+	width: 100%;
+	align-items: center;
+}
+
+/* Button
+-------------------------------------------------------------------------------------------------------------------- */
+
+button {
+	background-color: var(--Green600);
+	color: var(--White);
+	border: none;
+	border-radius: 10px;
+	padding: 15px 0;
+	font-weight: var(--FontWeight700);
+}
+
+button:hover {
+	background-color: var(--Grey900);
 }
